Configurando SDK para versão 8.0

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "ConexaoPadrao": "COLOCAR SUA CONNECTION STRING AQUI"
+  "ConnectionStrings": {    
+    "ConexaoPadrao": "Server=localhost; Initial Catalog=Tarefa; Trusted_Connection=True; Encrypt=False; TrustServerCertificate=True; Integrated Security=True"
   }
 }
